# treadl

./: .woodpecker.yml  LICENSE  README.md
.nova/: Artwork  Configuration.json
api/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  bucket-policy-dev.json  bucket-policy.json  envfile.template  firebase.json.template  pyproject.toml
api/api/: accounts.py  activitypub.py  groups.py  invitations.py  objects.py  projects.py  root.py  search.py  snippets.py  uploads.py  users.py
api/chalicelib/api/: accounts.py  activitypub.py  billing.py  groups.py  invitations.py  objects.py  projects.py  root.py  search.py  uploads.py  users.py
api/chalicelib/util/: database.py  errors.py  mail.py  push.py  util.py  wif.py
api/migrations/: object_previews.py
api/util/: util.py  wif.py
mobile/: .gitignore  README.md  flutter_jank_metrics_01.json  flutter_jank_metrics_02.json  flutter_jank_metrics_03.json  flutter_jank_metrics_04.json  pubspec.yaml
mobile/android/: build.gradle
mobile/lib/: api.dart  data_image.dart  explore.dart  group.dart  group_members.dart  group_noticeboard.dart  groups.dart  home.dart  lib.dart  login.dart  main.dart  model.dart  object.dart  onboarding.dart  project.dart  projects.dart  register.dart  routeArguments.dart  settings.dart  store.dart  user.dart  util.dart  welcome.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
web/: .env.development  .env.production  .eslintrc  .gitignore  Dockerfile  README.md  bucket-policy.json  deploy.sh  index.html  package.json  vercel.json  vite.config.js
web/src/: index.js  (+2 more)
(+179 files in other folders)
