[tool.poetry]
name = "api"
version = "0.1.0"
description = "Treadl API"
authors = ["Will <will@seastorm.co>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^1.1.1"
bcrypt = "^3.1.7"
pyjwt = "^1.7.1"
boto3 = "^1.10.50"
flask-cors = "^3.0.8"
dnspython = "^1.16.0"
requests = "^2.22.0"
botocore = "^1.13.50"
pymongo = "^3.10.1"
flask_limiter = "^1.3.1"
werkzeug = "^1.0.1"
firebase-admin = "^4.3.0"
blurhash-python = "^1.0.2"
gunicorn = "^20.0.4"
sentry-sdk = {extras = ["flask"], version = "^1.5.10"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
